# svelte-wasm

./: .bazelrc  .gitignore  Dockerfile  README.md  WORKSPACE  docker-compose.yaml  package-lock.json  package.json
emscripten_toolchain/: crosstool.bzl  wasm_cc_binary.bzl
src/add/: App.Svelte  App.svelte  BUILD.bazel  add-service.js  add.cc  closure-config.json  externs.js  index.html  main.js  server.js
